# dl-buildup

./: logistic_descent.ipynb  logistic_regression.ipynb  pyproject.toml  summary.ipynb  torch_basic.ipynb  torch_basic_20241215.ipynb
gan/: gan.ipynb
rnn/: RNN_country_classification.ipynb  RNN_gender_classfication.ipynb  torch_RNN.ipynb
torch_basic/: binary_classification_20241229.ipynb  multiclass_classification_20241229.ipynb  torch_Linear regression_20241215.ipynb
upstage/: api.ipynb
