[tool.poetry]
name = "dl-buildup"
version = "0.1.0"
description = ""
authors = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "2.2.1"
torchvision = "0.17.1"
numpy = "^1.26.4"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
openai = "^1.56.1"
langchain-core = "^0.3.21"
langchain-upstage = "^0.4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
